cursos/desafio-final-dk8s/aulas/apresentacao-do-desafio-final-dk8s/projetos/desafio-final-dk8s/semana-4/k8s/tipsbank-contas/postgres-replica-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-replica
  namespace: tipsbank-contas
  labels:
    app: postgres-replica
    team: tipsbank
    env: prod
spec:
  serviceName: postgres-headless
  replicas: 1
  selector:
    matchLabels:
      app: postgres-replica
  template:
    metadata:
      labels:
        app: postgres-replica
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: postgres
              topologyKey: kubernetes.io/hostname
      tolerations:
        - key: compliance
          operator: Equal
          value: strict
          effect: NoSchedule
      containers:
        - name: postgres-replica
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "tipsbank"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "tipsbank"]
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: pgdata-replica
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: init-sql
          configMap:
            name: configmap-initsql
  volumeClaimTemplates:
    - metadata:
        name: pgdata-replica
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 2Gi
