cursos/desafio-final-dk8s/aulas/apresentacao-do-desafio-final-dk8s/projetos/desafio-final-dk8s/semana-4/k8s/tipsbank-contas/api-contas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-contas
  namespace: tipsbank-contas
  labels:
    app: api-contas
spec:
  selector:
    app: api-contas
  ports:
    - name: http
      port: 8080
      targetPort: 8080
