cursos/desafio-final-dk8s/aulas/apresentacao-do-desafio-final-dk8s/projetos/desafio-final-dk8s/semana-4/k8s/tipsbank-contas/ingress-api-contas.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-contas
  namespace: tipsbank-contas
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.tipsbank.local
      secretName: tipsbank-api-tls
  rules:
    - host: api.tipsbank.local
      http:
        paths:
          - path: /contas(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-contas
                port:
                  number: 8080
